[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0"
]
build-backend = 'setuptools.build_meta'

[project]
name = "simulai-toolkit"
version = "1.0.0"
description = "A Python package with data-driven pipelines for physics-informed machine learning"
readme = "README.rst"
license = {text = "Apache Software License"}
dependencies = [
    "imageio",
    "imageio-ffmpeg",
    "numpy",
    "numba",
    "pyDOE",
    "scipy<1.9.0",
    "sympy",
    "torch<1.13.0",
    "xarray",
    "scikit-learn",
    "matplotlib",
    "psutil",
    "h5py",
    "dask",
    "netCDF4",
    "six",
    "numexpr",
    "minio",
    "optuna",
    "urllib3<1.27"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["bumpver", "flake8", "coverage", "pytest"]
mpi = ["mpi4py"]

[project.urls]
Homepage = "https://github.com/IBM/simulai"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
    
    
