[build-system]
requires = [ "setuptools" ]
build-backend = 'setuptools.build_meta'

[project]
name = "simulai-toolkit"
version = "0.99.16"
description = "A Python package with data-driven pipelines for physics-informed machine learning"
license = { "text" = "Apache License, Version 2.0" }
readme = { "file" = "DESCRIPTION.md", "content-type" = "text/markdown" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy",
    "numba",
    "scipy<1.9.0",
    "sympy",
    "torch<=1.13.1",
    "scikit-learn",
    "psutil",
    "h5py",
    "dask",
    "six",
    "numexpr",
    "minio",
    "optuna",
    "urllib3<1.27"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["yapf","bumpver", "flake8", "coverage", "pytest"]
mpi = ["mpi4py"]

[project.urls]
Source = "https://github.com/IBM/simulai"
Tracker = "https://github.com/IBM/simulai/issues"
Documentation = "https://simulai-toolkit.readthedocs.io"


[tool.setuptools.packages.find]
include = ["simulai", "simulai.*"]
namespaces = false

[tool.bumpver]
current_version = "0.99.16"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
